- removed php version errors - fixed table width - removed bogus files - removed missing background image css setups - made copyright date dynamic - removed failing google ad

--- a/city_generator.css
+++ b/city_generator.css
@@ -10,6 +10,7 @@
 .table_center {
 	margin-left: auto;
 	margin-right: auto;
+	width: 100%;
 }
 .field_title {
 	font-weight: bold;
