--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ Released for free under a Creative Commons Attribution 2.5 License
 }
 
 body {
-	background: #FFFFFF url(images/img01.gif) repeat-x;
+	background: #FFFFFF;
 	text-align: justify;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 13px;
@@ -431,7 +431,6 @@ hr {
 	clear: both;
 	margin: 0 auto;
 	padding: 20px 0;
-	background: url(images/img11.gif) repeat-x;
 	text-align: center;
 }
 
